Year 2024 Day 15 Part 2 - Ok