@@ -4,10 +4,8 @@ import lombok.Getter;
 
 import java.awt.*;
 import java.awt.geom.AffineTransform;
-import java.util.Arrays;
 import java.util.List;
-import java.util.Objects;
-import java.util.Optional;
+import java.util.*;
 import java.util.stream.Collectors;
 
 public class ASD {
@@ -16,124 +14,75 @@ public class ASD {
 
     }
 
-    public record Warehouse(Entity[][] warehouse) {
+    @Getter
+    public static class Warehouse {
 
-        public Rectangle getBounds() {
-            return new Rectangle(warehouse[0].length, warehouse.length);
+        private final List<Entity> entities;
+
+        public Warehouse(List<Entity> entities) {
+            this.entities = entities;
         }
 
-        public void setEntityAt(Point point, Entity entity) {
-            warehouse[point.y][point.x] = entity;
-            entity.position.setLocation(point);
-        }
-
-        public Optional<Entity> getEntityAt(Point point) {
-            return Optional.of(point).filter(getBounds()::contains).map(p -> warehouse[p.y][p.x]);
-        }
-
-        public List<Entity> getEntities() {
-            return Arrays.stream(warehouse).flatMap(Arrays::stream).collect(Collectors.toList());
+        public List<Entity> getEntityAt(Rectangle bounds) {
+            return getEntities().stream().filter(e -> e.getBounds().intersects(bounds)).toList();
         }
 
         public Optional<Player> findPlayer() {
             return getEntities().stream().filter(Player.class::isInstance).map(Player.class::cast).findAny();
         }
 
-        @Override
-        public String toString() {
-            Entity[][] warehouseTmp = new Entity[this.warehouse.length][this.warehouse[0].length];
-            getEntities().forEach(e -> warehouseTmp[e.position.y][e.position.x] = e);
-            return Arrays.stream(warehouseTmp).map(row -> Arrays.stream(row).filter(Objects::nonNull).map(Entity::toString).collect(Collectors.joining())).collect(Collectors.joining("\n"));
-        }
-
         public long getScore() {
-            return getEntities().stream().filter(Box.class::isInstance).map(Entity::getPosition).mapToInt(e -> e.y * 100 + e.x).sum();
+            return getEntities().stream().filter(Box.class::isInstance).map(Entity::getBounds).map(Rectangle::getLocation).mapToInt(e -> e.y * 100 + e.x).sum();
         }
     }
 
     @Getter
     public static abstract class Entity {
-        protected final Point position;
+        protected final Rectangle bounds;
 
-        public Entity(Point position) {
-            this.position = position;
+        public Entity(Rectangle bounds) {
+            this.bounds = bounds;
         }
 
-        public abstract Entity move(Warehouse warehouse, Direction direction);
+        public void setPosition(Point position) {
+            this.bounds.setLocation(position);
+        }
+
+        public Set<Entity> push(Warehouse warehouse, Direction direction) {
+            Set<Entity> entities = new HashSet<>(warehouse.getEntityAt(new Rectangle(direction.move(this.bounds.getLocation()), bounds.getSize())));
+            entities.addAll(entities.stream().filter(e -> !Objects.equals(e, this)).map(e -> e.push(warehouse, direction)).flatMap(Set::stream).collect(Collectors.toCollection(HashSet::new)));
+            return entities;
+        }
+
+        public void move(Warehouse warehouse, Direction direction) {
+            this.setPosition(direction.move(this.bounds.getLocation()));
+        }
     }
 
     public static class Wall extends Entity {
-        public Wall(Point position) {
-            super(position);
-        }
-
-        @Override
-        public Entity move(Warehouse warehouse, Direction direction) {
-            throw new UnsupportedOperationException("Cannot move into a wall");
-        }
-
-        @Override
-        public String toString() {
-            return "#";
-        }
-    }
-
-    public static class Empty extends Entity {
-        public Empty(Point position) {
-            super(position);
-        }
-
-        @Override
-        public Entity move(Warehouse warehouse, Direction direction) {
-            return this;
-        }
-
-        @Override
-        public String toString() {
-            return ".";
+        public Wall(Rectangle bounds) {
+            super(bounds);
         }
     }
 
     public static class Box extends Entity {
-        public Box(Point position) {
-            super(position);
-        }
-
-        @Override
-        public Entity move(Warehouse warehouse, Direction direction) {
-            Point next = direction.move(this.position);
-            Entity moved = warehouse.getEntityAt(next).map(e -> e.move(warehouse, direction)).orElseThrow();
-            warehouse.setEntityAt(next, this);
-            return moved;
-        }
-
-        @Override
-        public String toString() {
-            return "O";
+        public Box(Rectangle bounds) {
+            super(bounds);
         }
     }
 
     public static class Player extends Entity {
-        public Player(Point position) {
-            super(position);
+        public Player(Rectangle bounds) {
+            super(bounds);
         }
 
-        @Override
-        public Entity move(Warehouse warehouse, Direction direction) {
-            try {
-                Point next = direction.move(this.position);
-                Entity moved = warehouse.getEntityAt(next).map(e -> e.move(warehouse, direction)).orElseThrow();
-                warehouse.setEntityAt(this.position, moved);
-                warehouse.setEntityAt(next, this);
-            } catch (UnsupportedOperationException e) {
-                // do nothing
+        public void move(Warehouse warehouse, Direction direction) {
+            Set<Entity> entitiesToPush = this.push(warehouse, direction);
+
+            if (entitiesToPush.stream().noneMatch(e -> e instanceof Wall)) {
+                this.setPosition(direction.move(this.bounds.getLocation()));
+                entitiesToPush.forEach(e -> e.move(warehouse, direction));
             }
-            return this;
-        }
-
-        @Override
-        public String toString() {
-            return "@";
         }
     }
 
